--- a/reports/ESP_IFRcountry_results.Rmd
+++ b/reports/ESP_IFRcountry_results.Rmd
@@ -12,7 +12,7 @@ Population demographics and serological differences incorporate. Serology from h
 # remotes::install_github("mrc-ide/COVIDCurve", ref = "develop")
 library(COVIDCurve)
 library(tidyverse)
-source("~/Documents/GitHub/reestimate_covidIFR_analysis/R/extra_MCMC_plotting_functions.R")
+source("R/extra_MCMC_plotting_functions.R")
 ```
 
 
@@ -23,7 +23,7 @@ source("~/Documents/GitHub/reestimate_covidIFR_analysis/R/extra_MCMC_plotting_fu
 #...................... 
 # read in data
 #......................
-modout <- readRDS("~/Documents/GitHub/reestimate_covidIFR_analysis/results/temp_slurm_worker_results/_rslurm_ESPage/results_6.RDS")[[1]]
+modout <- readRDS("results/temp_slurm_worker_results/_rslurm_newtuneMCMC_ESPage/results_23.RDS")[[1]]
 # TODO make this more consistent
 # 
 agekey <- tibble::tibble(ageband = c("0-10", "10-20", "20-30", "30-40", "40-50", "50-60", "60-70", "70-80", "80-90", "90-999"),
@@ -82,6 +82,10 @@ plot2 <- infxncurve$plotObj
 
 main_plotObj <- cowplot::plot_grid(plot1, plot2, ncol = 1, nrow = 2)
 
+jpeg("figures/ESP_ifr_plot_age.jpg", width = 11, height = 8, units = "in", res = 500)
+main_plotObj
+graphics.off()
+
 ```
 
 ```{r, results='asis', fig.width=8, fig.height=6}
@@ -134,6 +138,10 @@ ppc_plot_age <- ggplot() +
   theme(plot.title = element_text(hjust = 0.5, vjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5, vjust = 0.5))
 
+jpeg("figures/ESP_ppc_plot_age.jpg", width = 11, height = 8, units = "in", res = 500)
+ppc_plot_age
+graphics.off()
+
 ```
 
 ```{r, results='asis'}
@@ -145,8 +153,8 @@ ppc_plot_age
 #...................... 
 # read in data
 #......................
-modout <- readRDS("~/Documents/GitHub/reestimate_covidIFR_analysis/results/temp_slurm_worker_results/_rslurm_ESPregion/results_0.RDS")[[1]]
-rgnkey <- readRDS("~/Documents/GitHub/reestimate_covidIFR_analysis/data/derived/ESP/ESP_rgn_key.RDS") %>% 
+modout <- readRDS("results/temp_slurm_worker_results/_rslurm_ESPregion/results_0.RDS")[[1]]
+rgnkey <- readRDS("data/derived/ESP/ESP_rgn_key.RDS") %>% 
   dplyr::rename(param = name,
                 region = rgn)
 ```
@@ -200,6 +208,10 @@ plot2 <- infxncurve$plotObj
 
 main_plotObj <- cowplot::plot_grid(plot1, plot2, ncol = 1, nrow = 2)
 
+jpeg("figures/ESP_ifr_plot_rgn.jpg", width = 11, height = 8, units = "in", res = 500)
+main_plotObj
+graphics.off()
+
 ```
 
 ```{r, results='asis', fig.width=8, fig.height=6}
@@ -250,6 +262,11 @@ ppc_plot_rgn <- ggplot() +
   ggtitle("Posterior Predictive Check", subtitle = "Grey Lines are Draws from Posterior, Blue Line is Observed Data (from ECDC)") +
   theme(plot.title = element_text(hjust = 0.5, vjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5, vjust = 0.5))
+
+
+jpeg("figures/ESP_ppc_plot_rgn.jpg", width = 11, height = 8, units = "in", res = 500)
+ppc_plot_rgn
+graphics.off()
 
 ```
 
