--- a/reports/NLD_IFRcountry_results.Rmd
+++ b/reports/NLD_IFRcountry_results.Rmd
@@ -5,14 +5,15 @@ editor_options:
 ---
 
 # Netherlands
+_N.B._ Currently have don't have age-band specific seroprevalence in the NLD estimates. May in part result in inflated IFR estimates (i.e. just considering population demography at the moment).
+
 ```{r}
 # remotes::install_github("mrc-ide/COVIDCurve", ref = "develop")
 library(COVIDCurve)
 library(tidyverse)
-source("~/Documents/GitHub/reestimate_covidIFR_analysis/R/extra_MCMC_plotting_functions.R")
+source("R/extra_MCMC_plotting_functions.R")
 ```
 
-_N.B._ Currently have don't have age-band specific seroprevalence in the NLD estimates. May in part result in inflated IFR estimates (i.e. just considering population demography at the moment).
 
 ## Results {.tabset}
 
@@ -21,7 +22,7 @@ _N.B._ Currently have don't have age-band specific seroprevalence in the NLD est
 #...................... 
 # read in data
 #......................
-modout <- readRDS("~/Documents/GitHub/reestimate_covidIFR_analysis/results/temp_slurm_worker_results/_rslurm_NLDfits/results_0.RDS")[[1]]
+modout <- readRDS("results/temp_slurm_worker_results/_rslurm_NLDfits/results_0.RDS")[[1]]
 # TODO make this more consistent
 # 
 agekey <- tibble::tibble(ageband = c("0-10", "10-20", "20-30", "30-40", "40-50", "50-60", "60-70", "70-80", "80-90", "90-999"),
@@ -79,6 +80,11 @@ plot2 <- infxncurve$plotObj
 
 main_plotObj <- cowplot::plot_grid(plot1, plot2, ncol = 1, nrow = 2)
 
+# out
+jpeg("figures/NLD_ifr_plot_age.jpg", width = 11, height = 8, units = "in", res = 500)
+main_plotObj
+graphics.off()
+
 ```
 
 ```{r, results='asis', fig.width=8, fig.height=6}
@@ -131,7 +137,13 @@ ppc_plot_age <- ggplot() +
   theme(plot.title = element_text(hjust = 0.5, vjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5, vjust = 0.5))
 
+# out
+jpeg("figures/NLD_ppc_plot_age.jpg", width = 11, height = 8, units = "in", res = 500)
+ppc_plot_age
+graphics.off()
+
 ```
+
 
 ```{r, results='asis'}
 ppc_plot_age
@@ -142,8 +154,8 @@ ppc_plot_age
 <!-- #......................  -->
 <!-- # read in data -->
 <!-- #...................... -->
-<!-- modout <- readRDS("~/Documents/GitHub/reestimate_covidIFR_analysis/results/temp_slurm_worker_results/_rslurm_ESPregion/results_0.RDS")[[1]] -->
-<!-- rgnkey <- readRDS("~/Documents/GitHub/reestimate_covidIFR_analysis/data/derived/ESP/ESP_rgn_key.RDS") %>%  -->
+<!-- modout <- readRDS("results/temp_slurm_worker_results/_rslurm_ESPregion/results_0.RDS")[[1]] -->
+<!-- rgnkey <- readRDS("data/derived/ESP/ESP_rgn_key.RDS") %>%  -->
 <!--   dplyr::rename(param = name, -->
 <!--                 region = rgn) -->
 <!-- ``` -->
