--- a/reports/interal_report_v1.Rmd
+++ b/reports/interal_report_v1.Rmd
@@ -14,6 +14,7 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
+knitr::opts_knit$set(root.dir = here::here(""))
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, 
                       message = FALSE, eval = TRUE, 
                       results = 'hide', fig.align = 'center')
