--- a/reports/ESP_IFRcountry_results.Rmd
+++ b/reports/ESP_IFRcountry_results.Rmd
@@ -1,5 +1,14 @@
 ---
-output: html_document
+title: "Reestimating the ESP IFR with Serology Data"
+date: "`r format(Sys.time(), '%B %d, %Y')`"
+output: 
+  html_document:
+    highlight: textmate
+    theme: lumen
+    toc: yes
+    toc_float: yes
+    toc_depth: 3
+    code_folding: hide
 editor_options: 
   chunk_output_type: console
 ---
@@ -7,7 +16,12 @@ editor_options:
 # Spain
 
 Population demographics and serological differences incorporate. Serology from household survey.
-
+```{r}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, 
+                      message = FALSE, eval = TRUE, 
+                      results = 'hide', fig.align = 'center')
+knitr::opts_knit$set(root.dir = here::here())
+```
 ```{r}
 # remotes::install_github("mrc-ide/COVIDCurve", ref = "develop")
 library(COVIDCurve)
@@ -23,11 +37,7 @@ source("R/extra_MCMC_plotting_functions.R")
 #...................... 
 # read in data
 #......................
-modout <- readRDS("results/temp_slurm_worker_results/_rslurm_newtuneMCMC_ESPage/results_23.RDS")[[1]]
-# TODO make this more consistent
-# 
-agekey <- tibble::tibble(ageband = c("0-10", "10-20", "20-30", "30-40", "40-50", "50-60", "60-70", "70-80", "80-90", "90-999"),
-                             param = paste0("ma", 1:10))
+modout <- readRDS("results/ESP_MixPower_Fits/age_GTI2_rung50_burn10000_smpl10000.RDS")$fit
 ```
 
 #### Log Plot
@@ -48,7 +58,7 @@ modout$mcmcout$output %>%
 ```{r}
 quickout <- quick_mc_diagnostics(modout)
 ```
-```{r, results='asis', fig.width=8, fig.height=3}
+```{r, results='asis', fig.width=8, fig.height=8}
 quickout
 ```
 
@@ -56,6 +66,8 @@ quickout
 #### IFRs & Incidence Curve
 
 ```{r}
+agekey <- modout$inputs$IFRmodel$IFRdictkey %>% 
+  dplyr::rename(param = Strata)
 #...................... 
 # get ifrs 
 #......................
@@ -66,9 +78,9 @@ ifrs <- dplyr::left_join(agekey, ifrs, by = "param")
 #...................... 
 # get incidence curve
 #......................
-infxncurve <- COVIDCurve::draw_posterior_infxn_points_cubic_splines(IFRmodel_inf = modout,
-                                                                    CIquant = 0.90,
-                                                                    by_chain = FALSE)
+infxncurve <- COVIDCurve::draw_posterior_infxn_cubic_splines(IFRmodel_inf = modout,
+                                                             dwnsmpl = 1e3,
+                                                             by_chain = FALSE)
 #...................... 
 # make ifr and incidence plots
 #......................
@@ -99,6 +111,91 @@ ifrs %>%
 
 ```
 
+#### Seroprevalence Observerd vs. Inferred True Prev
+```{r}
+seropnts <- COVIDCurve::draw_posterior_inferred_seroprevalences(IFRmodel_inf = modout,
+                                                                  dwnsmpl = 1e3,
+                                                                  by_chain = FALSE)
+
+seroprev_plotdat <- seropnts %>% 
+  dplyr::select(., c("sim", dplyr::starts_with("seroprev_"))) %>% 
+  tidyr::gather(., key = "param", value = "inf_seroprev", 2:ncol(.)) %>%
+  dplyr::mutate(Strata = sub("seroprev_", "", param)) %>%
+  dplyr::group_by(Strata) %>% 
+  dplyr::summarise(
+    min = min(inf_seroprev),
+    LCI = quantile(inf_seroprev, 0.025),
+    median = median(inf_seroprev),
+    mean = mean(inf_seroprev),
+    UCI = quantile(inf_seroprev, 0.975),
+    max = max(inf_seroprev),
+    ESS = coda::effectiveSize(coda::as.mcmc(inf_seroprev)),
+    GewekeZ = coda::geweke.diag(coda::as.mcmc(inf_seroprev))[[1]],
+    GewekeP = dnorm(GewekeZ)) %>% 
+  dplyr::left_join(., y = modout$inputs$IFRmodel$data$obs_serology, by = "Strata") %>% 
+  dplyr::left_join(., y = modout$inputs$IFRmodel$IFRdictkey, by = "Strata")
+
+seroprev_plotdat <- seroprev_plotdat %>% 
+  dplyr::arrange(ageband) %>% 
+  dplyr::mutate(ageband = forcats::as_factor(ageband))
+
+```
+
+```{r, results='asis'}
+ggplot() +
+  geom_pointrange(data = seroprev_plotdat, aes(x = ageband, ymin = LCI, ymax = UCI, y = median), color = "#252525") +
+  geom_point(data = seroprev_plotdat, aes(x = ageband, y = SeroPrev), color = "#3182bd") + 
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 45, vjust = 0.90, hjust= 1, face = "bold")) +
+  xlab("") + ylab("Median (95% CIs)") +
+  ggtitle("Observed vs. Inferred True Seroprevalence")
+
+
+```
+
+
+#### Seroprevalence Observerd vs. RG-Corrected Inferred Obs. Prev (Posterior Check)
+```{r}
+seropnts <- COVIDCurve::draw_posterior_RGobserved_seroprevalences(IFRmodel_inf = modout,
+                                                                  dwnsmpl = 1e3,
+                                                                  by_chain = FALSE)
+
+seroprev_plotdat <- seropnts %>% 
+  dplyr::select(., c("sim", dplyr::starts_with("seroprev_"))) %>% 
+  tidyr::gather(., key = "param", value = "inf_seroprev", 2:ncol(.)) %>%
+  dplyr::mutate(Strata = sub("seroprev_", "", param)) %>%
+  dplyr::group_by(Strata) %>% 
+  dplyr::summarise(
+    min = min(inf_seroprev),
+    LCI = quantile(inf_seroprev, 0.025),
+    median = median(inf_seroprev),
+    mean = mean(inf_seroprev),
+    UCI = quantile(inf_seroprev, 0.975),
+    max = max(inf_seroprev),
+    ESS = coda::effectiveSize(coda::as.mcmc(inf_seroprev)),
+    GewekeZ = coda::geweke.diag(coda::as.mcmc(inf_seroprev))[[1]],
+    GewekeP = dnorm(GewekeZ)) %>% 
+  dplyr::left_join(., y = modout$inputs$IFRmodel$data$obs_serology, by = "Strata") %>% 
+  dplyr::left_join(., y = modout$inputs$IFRmodel$IFRdictkey, by = "Strata")
+
+seroprev_plotdat <- seroprev_plotdat %>% 
+  dplyr::arrange(ageband) %>% 
+  dplyr::mutate(ageband = forcats::as_factor(ageband))
+
+```
+
+```{r, results='asis'}
+ggplot() +
+  geom_pointrange(data = seroprev_plotdat, aes(x = ageband, ymin = LCI, ymax = UCI, y = median), color = "#252525") +
+  geom_point(data = seroprev_plotdat, aes(x = ageband, y = SeroPrev), color = "#3182bd") + 
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 45, vjust = 0.90, hjust= 1, face = "bold")) +
+  xlab("") + ylab("Median (95% CIs)") +
+  ggtitle("Observed vs. RG-Corrected Inferred Observed Seroprevalence (Posterior Check)")
+
+
+```
+
 
 #### Posterior Predictive Check
 ```{r}
@@ -106,21 +203,20 @@ ifrs %>%
 # get posterior draws
 #......................
 postdat <- COVIDCurve::posterior_check_infxns_to_death(IFRmodel_inf = modout,
-                                                       CIquant = 0.90,
+                                                       dwnsmpl = 1e3,
                                                        by_chain = FALSE)
-dwnsmpl <- sample(levels(factor(postdat$sim)), size = 1e3, replace = TRUE) # downsample sims, replace = TRUE just for debug
 postdat_long <- postdat %>%
   dplyr::select(c("sim", "time", dplyr::starts_with("deaths"))) %>%
   tidyr::gather(., key = "param", value = "deaths", 3:ncol(.)) %>%
   dplyr::mutate(param = gsub("deaths_", "", param)) %>% 
-  dplyr::left_join(., y = agekey, by = "param") %>%
-  dplyr::filter(sim %in% dwnsmpl) # downsample sims
+  dplyr::left_join(., y = agekey, by = "param") 
 
 #......................
 # get deaths posterior pred check
 #......................
 datclean <-  modout$inputs$IFRmodel$data$obs_deaths %>%
-  dplyr::filter(Deaths != -1)
+  dplyr::filter(Deaths != -1) %>% 
+  dplyr::left_join(., modout$inputs$IFRmodel$IFRdictkey, by = "Strata")
 
 
 
@@ -153,10 +249,9 @@ ppc_plot_age
 #...................... 
 # read in data
 #......................
-modout <- readRDS("results/temp_slurm_worker_results/_rslurm_ESPregion/results_0.RDS")[[1]]
-rgnkey <- readRDS("data/derived/ESP/ESP_rgn_key.RDS") %>% 
-  dplyr::rename(param = name,
-                region = rgn)
+modout <- readRDS("results/ESP_MixPower_Fits/region_GTI4.5_rung50_burn10000_smpl10000.RDS")$fit
+rgnkey <- agekey <- modout$inputs$IFRmodel$IFRdictkey %>% 
+  dplyr::rename(param = Strata)
 ```
 
 #### Log Plot
@@ -174,7 +269,7 @@ modout$mcmcout$output %>%
 ```
 
 #### Quick MCMC Diagnostics
-```{r, results='asis', fig.width=8, fig.height=3}
+```{r, results='asis', fig.width=8, fig.height=8}
 quick_mc_diagnostics(modout)
 ```
 
@@ -192,9 +287,9 @@ ifrs <- dplyr::left_join(rgnkey, ifrs, by = "param")
 #...................... 
 # get incidence curve
 #......................
-infxncurve <- COVIDCurve::draw_posterior_infxn_points_cubic_splines(IFRmodel_inf = modout,
-                                                                    CIquant = 0.90,
-                                                                    by_chain = FALSE)
+infxncurve <- COVIDCurve::draw_posterior_infxn_cubic_splines(IFRmodel_inf = modout,
+                                                             dwnsmpl = 1e3,
+                                                             by_chain = FALSE)
 #...................... 
 # make ifr and incidence plots
 #......................
@@ -225,7 +320,90 @@ ifrs %>%
 
 ```
 
+#### Seroprevalence Observerd vs. Inferred True Prev
+```{r}
+seropnts <- COVIDCurve::draw_posterior_inferred_seroprevalences(IFRmodel_inf = modout,
+                                                                  dwnsmpl = 1e3,
+                                                                  by_chain = FALSE)
 
+seroprev_plotdat <- seropnts %>% 
+  dplyr::select(., c("sim", dplyr::starts_with("seroprev_"))) %>% 
+  tidyr::gather(., key = "param", value = "inf_seroprev", 2:ncol(.)) %>%
+  dplyr::mutate(Strata = sub("seroprev_", "", param)) %>%
+  dplyr::group_by(Strata) %>% 
+  dplyr::summarise(
+    min = min(inf_seroprev),
+    LCI = quantile(inf_seroprev, 0.025),
+    median = median(inf_seroprev),
+    mean = mean(inf_seroprev),
+    UCI = quantile(inf_seroprev, 0.975),
+    max = max(inf_seroprev),
+    ESS = coda::effectiveSize(coda::as.mcmc(inf_seroprev)),
+    GewekeZ = coda::geweke.diag(coda::as.mcmc(inf_seroprev))[[1]],
+    GewekeP = dnorm(GewekeZ)) %>% 
+  dplyr::left_join(., y = modout$inputs$IFRmodel$data$obs_serology, by = "Strata") %>% 
+  dplyr::left_join(., y = modout$inputs$IFRmodel$IFRdictkey, by = "Strata")
+
+seroprev_plotdat <- seroprev_plotdat %>% 
+  dplyr::arrange(region) %>% 
+  dplyr::mutate(region = forcats::as_factor(region))
+
+```
+
+```{r, results='asis'}
+ggplot() +
+  geom_pointrange(data = seroprev_plotdat, aes(x = region, ymin = LCI, ymax = UCI, y = median), color = "#252525") +
+  geom_point(data = seroprev_plotdat, aes(x = region, y = SeroPrev), color = "#3182bd") + 
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 45, vjust = 0.90, hjust= 1, face = "bold")) +
+  xlab("") + ylab("Median (95% CIs)") +
+  ggtitle("Observed vs. Inferred True Seroprevalence")
+
+
+```
+
+
+#### Seroprevalence Observerd vs. RG-Corrected Inferred Obs. Prev (Posterior Check)
+```{r}
+seropnts <- COVIDCurve::draw_posterior_RGobserved_seroprevalences(IFRmodel_inf = modout,
+                                                                  dwnsmpl = 1e3,
+                                                                  by_chain = FALSE)
+
+seroprev_plotdat <- seropnts %>% 
+  dplyr::select(., c("sim", dplyr::starts_with("seroprev_"))) %>% 
+  tidyr::gather(., key = "param", value = "inf_seroprev", 2:ncol(.)) %>%
+  dplyr::mutate(Strata = sub("seroprev_", "", param)) %>%
+  dplyr::group_by(Strata) %>% 
+  dplyr::summarise(
+    min = min(inf_seroprev),
+    LCI = quantile(inf_seroprev, 0.025),
+    median = median(inf_seroprev),
+    mean = mean(inf_seroprev),
+    UCI = quantile(inf_seroprev, 0.975),
+    max = max(inf_seroprev),
+    ESS = coda::effectiveSize(coda::as.mcmc(inf_seroprev)),
+    GewekeZ = coda::geweke.diag(coda::as.mcmc(inf_seroprev))[[1]],
+    GewekeP = dnorm(GewekeZ)) %>% 
+  dplyr::left_join(., y = modout$inputs$IFRmodel$data$obs_serology, by = "Strata") %>% 
+  dplyr::left_join(., y = modout$inputs$IFRmodel$IFRdictkey, by = "Strata")
+
+seroprev_plotdat <- seroprev_plotdat %>% 
+  dplyr::arrange(region) %>% 
+  dplyr::mutate(region = forcats::as_factor(region))
+
+```
+
+```{r, results='asis'}
+ggplot() +
+  geom_pointrange(data = seroprev_plotdat, aes(x = region, ymin = LCI, ymax = UCI, y = median), color = "#252525") +
+  geom_point(data = seroprev_plotdat, aes(x = region, y = SeroPrev), color = "#3182bd") + 
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 45, vjust = 0.90, hjust= 1, face = "bold")) +
+  xlab("") + ylab("Median (95% CIs)") +
+  ggtitle("Observed vs. RG-Corrected Inferred Observed Seroprevalence (Posterior Check)")
+
+
+```
 
 #### Posterior Predictive Check
 ```{r}
@@ -233,21 +411,20 @@ ifrs %>%
 # get posterior draws
 #......................
 postdat <- COVIDCurve::posterior_check_infxns_to_death(IFRmodel_inf = modout,
-                                                       CIquant = 0.90,
+                                                       dwnsmpl = 1e3,
                                                        by_chain = FALSE)
-dwnsmpl <- sample(levels(factor(postdat$sim)), size = 1e3, replace = TRUE) # downsample sims, replace = TRUE just for debug
 postdat_long <- postdat %>%
   dplyr::select(c("sim", "time", dplyr::starts_with("deaths"))) %>%
   tidyr::gather(., key = "param", value = "deaths", 3:ncol(.)) %>%
   dplyr::mutate(param = gsub("deaths_", "", param)) %>% 
-  dplyr::left_join(., y = rgnkey, by = "param") %>%
-  dplyr::filter(sim %in% dwnsmpl) # downsample sims
+  dplyr::left_join(., y = rgnkey, by = "param")
 
 #......................
 # get deaths posterior pred check
 #......................
 datclean <-  modout$inputs$IFRmodel$data$obs_deaths %>%
-  dplyr::filter(Deaths != -1)
+  dplyr::filter(Deaths != -1)  %>% 
+  dplyr::left_join(., modout$inputs$IFRmodel$IFRdictkey, by = "Strata")
 
 #...................... 
 # make plot
