--- a/reports/ESP_IFRcountry_results.Rmd
+++ b/reports/ESP_IFRcountry_results.Rmd
@@ -37,7 +37,7 @@ source("R/extra_MCMC_plotting_functions.R")
 #...................... 
 # read in data
 #......................
-modout <- readRDS("results/ESP_MixPower_Fits/age_GTI2_rung50_burn10000_smpl10000.RDS")$fit
+modout <- readRDS("results/ModFits/ESP_age_GTI2.5_rung50_burn10000_smpl10000.RDS")
 ```
 
 #### Log Plot
@@ -249,7 +249,7 @@ ppc_plot_age
 #...................... 
 # read in data
 #......................
-modout <- readRDS("results/ESP_MixPower_Fits/region_GTI4.5_rung50_burn10000_smpl10000.RDS")$fit
+modout <- readRDS("results/ModFits/ESP_rgns_GTI3_rung25_burn10000_smpl10000.RDS")$fit
 rgnkey <- agekey <- modout$inputs$IFRmodel$IFRdictkey %>% 
   dplyr::rename(param = Strata)
 ```
