--- a/reports/NLD_IFRcountry_results.Rmd
+++ b/reports/NLD_IFRcountry_results.Rmd
@@ -5,8 +5,13 @@ editor_options:
 ---
 
 # Netherlands
-_N.B._ Currently have don't have age-band specific seroprevalence in the NLD estimates. May in part result in inflated IFR estimates (i.e. just considering population demography at the moment).
-
+_N.B._ Issue with data?
+```{r}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, 
+                      message = FALSE, eval = TRUE, 
+                      results = 'hide', fig.align = 'center')
+knitr::opts_knit$set(root.dir = here::here())
+```
 ```{r}
 # remotes::install_github("mrc-ide/COVIDCurve", ref = "develop")
 library(COVIDCurve)
@@ -22,11 +27,7 @@ source("R/extra_MCMC_plotting_functions.R")
 #...................... 
 # read in data
 #......................
-modout <- readRDS("results/temp_slurm_worker_results/_rslurm_NLDfits/results_0.RDS")[[1]]
-# TODO make this more consistent
-# 
-agekey <- tibble::tibble(ageband = c("0-10", "10-20", "20-30", "30-40", "40-50", "50-60", "60-70", "70-80", "80-90", "90-999"),
-                             param = paste0("ma", 1:10))
+modout <- readRDS("results/ModFits/NLD_age_GTI3_rung50_burn10000_smpl10000.RDS")
 ```
 
 #### Log Plot
@@ -47,26 +48,31 @@ modout$mcmcout$output %>%
 ```{r}
 quickout <- quick_mc_diagnostics(modout)
 ```
-```{r, results='asis', fig.width=8, fig.height=3}
+```{r, results='asis', fig.width=8, fig.height=8}
 quickout
 ```
+
 
 #### IFRs & Incidence Curve
 
 ```{r}
+agekey <- modout$inputs$IFRmodel$IFRdictkey %>% 
+  dplyr::rename(param = Strata)
 #...................... 
 # get ifrs 
 #......................
 ifrs <- COVIDCurve::get_cred_intervals(IFRmodel_inf = modout, whichrung = paste0("rung", 1),
                                        what = "IFRparams", by_chain = FALSE)
-ifrs <- dplyr::left_join(agekey, ifrs, by = "param")
+ifrs <- dplyr::left_join(agekey, ifrs, by = "param") %>% 
+  dplyr::mutate(param = factor(param, levels = paste0("ma", 1:10))) %>% 
+  dplyr::arrange()
 
 #...................... 
 # get incidence curve
 #......................
-infxncurve <- COVIDCurve::draw_posterior_infxn_points_cubic_splines(IFRmodel_inf = modout,
-                                                                    CIquant = 0.90,
-                                                                    by_chain = FALSE)
+infxncurve <- COVIDCurve::draw_posterior_infxn_cubic_splines(IFRmodel_inf = modout,
+                                                             dwnsmpl = 1e3,
+                                                             by_chain = FALSE)
 #...................... 
 # make ifr and incidence plots
 #......................
@@ -80,7 +86,6 @@ plot2 <- infxncurve$plotObj
 
 main_plotObj <- cowplot::plot_grid(plot1, plot2, ncol = 1, nrow = 2)
 
-# out
 jpeg("figures/NLD_ifr_plot_age.jpg", width = 11, height = 8, units = "in", res = 500)
 main_plotObj
 graphics.off()
@@ -98,6 +103,91 @@ ifrs %>%
 
 ```
 
+#### Seroprevalence Observerd vs. Inferred True Prev
+```{r}
+seropnts <- COVIDCurve::draw_posterior_inferred_seroprevalences(IFRmodel_inf = modout,
+                                                                  dwnsmpl = 1e3,
+                                                                  by_chain = FALSE)
+
+seroprev_plotdat <- seropnts %>% 
+  dplyr::select(., c("sim", dplyr::starts_with("seroprev_"))) %>% 
+  tidyr::gather(., key = "param", value = "inf_seroprev", 2:ncol(.)) %>%
+  dplyr::mutate(Strata = sub("seroprev_", "", param)) %>%
+  dplyr::group_by(Strata) %>% 
+  dplyr::summarise(
+    min = min(inf_seroprev),
+    LCI = quantile(inf_seroprev, 0.025),
+    median = median(inf_seroprev),
+    mean = mean(inf_seroprev),
+    UCI = quantile(inf_seroprev, 0.975),
+    max = max(inf_seroprev),
+    ESS = coda::effectiveSize(coda::as.mcmc(inf_seroprev)),
+    GewekeZ = coda::geweke.diag(coda::as.mcmc(inf_seroprev))[[1]],
+    GewekeP = dnorm(GewekeZ)) %>% 
+  dplyr::left_join(., y = modout$inputs$IFRmodel$data$obs_serology, by = "Strata") %>% 
+  dplyr::left_join(., y = modout$inputs$IFRmodel$IFRdictkey, by = "Strata")
+
+seroprev_plotdat <- seroprev_plotdat %>% 
+  dplyr::arrange(ageband) %>% 
+  dplyr::mutate(ageband = forcats::as_factor(ageband))
+
+```
+
+```{r, results='asis'}
+ggplot() +
+  geom_pointrange(data = seroprev_plotdat, aes(x = ageband, ymin = LCI, ymax = UCI, y = median), color = "#252525") +
+  geom_point(data = seroprev_plotdat, aes(x = ageband, y = SeroPrev), color = "#3182bd") + 
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 45, vjust = 0.90, hjust= 1, face = "bold")) +
+  xlab("") + ylab("Median (95% CIs)") +
+  ggtitle("Observed vs. Inferred True Seroprevalence")
+
+
+```
+
+
+#### Seroprevalence Observerd vs. RG-Corrected Inferred Obs. Prev (Posterior Check)
+```{r}
+seropnts <- COVIDCurve::draw_posterior_RGobserved_seroprevalences(IFRmodel_inf = modout,
+                                                                  dwnsmpl = 1e3,
+                                                                  by_chain = FALSE)
+
+seroprev_plotdat <- seropnts %>% 
+  dplyr::select(., c("sim", dplyr::starts_with("seroprev_"))) %>% 
+  tidyr::gather(., key = "param", value = "inf_seroprev", 2:ncol(.)) %>%
+  dplyr::mutate(Strata = sub("seroprev_", "", param)) %>%
+  dplyr::group_by(Strata) %>% 
+  dplyr::summarise(
+    min = min(inf_seroprev),
+    LCI = quantile(inf_seroprev, 0.025),
+    median = median(inf_seroprev),
+    mean = mean(inf_seroprev),
+    UCI = quantile(inf_seroprev, 0.975),
+    max = max(inf_seroprev),
+    ESS = coda::effectiveSize(coda::as.mcmc(inf_seroprev)),
+    GewekeZ = coda::geweke.diag(coda::as.mcmc(inf_seroprev))[[1]],
+    GewekeP = dnorm(GewekeZ)) %>% 
+  dplyr::left_join(., y = modout$inputs$IFRmodel$data$obs_serology, by = "Strata") %>% 
+  dplyr::left_join(., y = modout$inputs$IFRmodel$IFRdictkey, by = "Strata")
+
+seroprev_plotdat <- seroprev_plotdat %>% 
+  dplyr::arrange(ageband) %>% 
+  dplyr::mutate(ageband = forcats::as_factor(ageband))
+
+```
+
+```{r, results='asis'}
+ggplot() +
+  geom_pointrange(data = seroprev_plotdat, aes(x = ageband, ymin = LCI, ymax = UCI, y = median), color = "#252525") +
+  geom_point(data = seroprev_plotdat, aes(x = ageband, y = SeroPrev), color = "#3182bd") + 
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 45, vjust = 0.90, hjust= 1, face = "bold")) +
+  xlab("") + ylab("Median (95% CIs)") +
+  ggtitle("Observed vs. RG-Corrected Inferred Observed Seroprevalence (Posterior Check)")
+
+
+```
+
 
 #### Posterior Predictive Check
 ```{r}
@@ -105,21 +195,20 @@ ifrs %>%
 # get posterior draws
 #......................
 postdat <- COVIDCurve::posterior_check_infxns_to_death(IFRmodel_inf = modout,
-                                                       CIquant = 0.90,
+                                                       dwnsmpl = 1e3,
                                                        by_chain = FALSE)
-dwnsmpl <- sample(levels(factor(postdat$sim)), size = 1e3, replace = TRUE) # downsample sims, replace = TRUE just for debug
 postdat_long <- postdat %>%
   dplyr::select(c("sim", "time", dplyr::starts_with("deaths"))) %>%
   tidyr::gather(., key = "param", value = "deaths", 3:ncol(.)) %>%
   dplyr::mutate(param = gsub("deaths_", "", param)) %>% 
-  dplyr::left_join(., y = agekey, by = "param") %>%
-  dplyr::filter(sim %in% dwnsmpl) # downsample sims
+  dplyr::left_join(., y = agekey, by = "param") 
 
 #......................
 # get deaths posterior pred check
 #......................
 datclean <-  modout$inputs$IFRmodel$data$obs_deaths %>%
-  dplyr::filter(Deaths != -1)
+  dplyr::filter(Deaths != -1) %>% 
+  dplyr::left_join(., modout$inputs$IFRmodel$IFRdictkey, by = "Strata")
 
 
 
@@ -137,13 +226,11 @@ ppc_plot_age <- ggplot() +
   theme(plot.title = element_text(hjust = 0.5, vjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5, vjust = 0.5))
 
-# out
 jpeg("figures/NLD_ppc_plot_age.jpg", width = 11, height = 8, units = "in", res = 500)
 ppc_plot_age
 graphics.off()
 
 ```
-
 
 ```{r, results='asis'}
 ppc_plot_age
@@ -154,10 +241,9 @@ ppc_plot_age
 <!-- #......................  -->
 <!-- # read in data -->
 <!-- #...................... -->
-<!-- modout <- readRDS("results/temp_slurm_worker_results/_rslurm_ESPregion/results_0.RDS")[[1]] -->
-<!-- rgnkey <- readRDS("data/derived/ESP/ESP_rgn_key.RDS") %>%  -->
-<!--   dplyr::rename(param = name, -->
-<!--                 region = rgn) -->
+<!-- modout <- readRDS("results/ModFits/NLD_rgn_GTI3_rung50_burn10000_smpl10000.RDS") -->
+<!-- rgnkey <- agekey <- modout$inputs$IFRmodel$IFRdictkey %>%  -->
+<!--   dplyr::rename(param = Strata) -->
 <!-- ``` -->
 
 <!-- #### Log Plot -->
@@ -174,6 +260,12 @@ ppc_plot_age
 
 <!-- ``` -->
 
+<!-- #### Quick MCMC Diagnostics -->
+<!-- ```{r, results='asis', fig.width=8, fig.height=8} -->
+<!-- quick_mc_diagnostics(modout) -->
+<!-- ``` -->
+
+
 <!-- #### IFRs & Incidence Curve -->
 
 <!-- ```{r} -->
@@ -187,9 +279,9 @@ ppc_plot_age
 <!-- #......................  -->
 <!-- # get incidence curve -->
 <!-- #...................... -->
-<!-- infxncurve <- COVIDCurve::draw_posterior_infxn_points_cubic_splines(IFRmodel_inf = modout, -->
-<!--                                                                     CIquant = 0.90, -->
-<!--                                                                     by_chain = FALSE) -->
+<!-- infxncurve <- COVIDCurve::draw_posterior_infxn_cubic_splines(IFRmodel_inf = modout, -->
+<!--                                                              dwnsmpl = 1e3, -->
+<!--                                                              by_chain = FALSE) -->
 <!-- #......................  -->
 <!-- # make ifr and incidence plots -->
 <!-- #...................... -->
@@ -202,6 +294,10 @@ ppc_plot_age
 <!-- plot2 <- infxncurve$plotObj -->
 
 <!-- main_plotObj <- cowplot::plot_grid(plot1, plot2, ncol = 1, nrow = 2) -->
+
+<!-- jpeg("figures/NLD_ifr_plot_rgn.jpg", width = 11, height = 8, units = "in", res = 500) -->
+<!-- main_plotObj -->
+<!-- graphics.off() -->
 
 <!-- ``` -->
 
@@ -216,7 +312,90 @@ ppc_plot_age
 
 <!-- ``` -->
 
+<!-- #### Seroprevalence Observerd vs. Inferred True Prev -->
+<!-- ```{r} -->
+<!-- seropnts <- COVIDCurve::draw_posterior_inferred_seroprevalences(IFRmodel_inf = modout, -->
+<!--                                                                   dwnsmpl = 1e3, -->
+<!--                                                                   by_chain = FALSE) -->
 
+<!-- seroprev_plotdat <- seropnts %>%  -->
+<!--   dplyr::select(., c("sim", dplyr::starts_with("seroprev_"))) %>%  -->
+<!--   tidyr::gather(., key = "param", value = "inf_seroprev", 2:ncol(.)) %>% -->
+<!--   dplyr::mutate(Strata = sub("seroprev_", "", param)) %>% -->
+<!--   dplyr::group_by(Strata) %>%  -->
+<!--   dplyr::summarise( -->
+<!--     min = min(inf_seroprev), -->
+<!--     LCI = quantile(inf_seroprev, 0.025), -->
+<!--     median = median(inf_seroprev), -->
+<!--     mean = mean(inf_seroprev), -->
+<!--     UCI = quantile(inf_seroprev, 0.975), -->
+<!--     max = max(inf_seroprev), -->
+<!--     ESS = coda::effectiveSize(coda::as.mcmc(inf_seroprev)), -->
+<!--     GewekeZ = coda::geweke.diag(coda::as.mcmc(inf_seroprev))[[1]], -->
+<!--     GewekeP = dnorm(GewekeZ)) %>%  -->
+<!--   dplyr::left_join(., y = modout$inputs$IFRmodel$data$obs_serology, by = "Strata") %>%  -->
+<!--   dplyr::left_join(., y = modout$inputs$IFRmodel$IFRdictkey, by = "Strata") -->
+
+<!-- seroprev_plotdat <- seroprev_plotdat %>%  -->
+<!--   dplyr::arrange(region) %>%  -->
+<!--   dplyr::mutate(region = forcats::as_factor(region)) -->
+
+<!-- ``` -->
+
+<!-- ```{r, results='asis'} -->
+<!-- ggplot() + -->
+<!--   geom_pointrange(data = seroprev_plotdat, aes(x = region, ymin = LCI, ymax = UCI, y = median), color = "#252525") + -->
+<!--   geom_point(data = seroprev_plotdat, aes(x = region, y = SeroPrev), color = "#3182bd") +  -->
+<!--   theme_bw() + -->
+<!--   theme(axis.text.x = element_text(angle = 45, vjust = 0.90, hjust= 1, face = "bold")) + -->
+<!--   xlab("") + ylab("Median (95% CIs)") + -->
+<!--   ggtitle("Observed vs. Inferred True Seroprevalence") -->
+
+
+<!-- ``` -->
+
+
+<!-- #### Seroprevalence Observerd vs. RG-Corrected Inferred Obs. Prev (Posterior Check) -->
+<!-- ```{r} -->
+<!-- seropnts <- COVIDCurve::draw_posterior_RGobserved_seroprevalences(IFRmodel_inf = modout, -->
+<!--                                                                   dwnsmpl = 1e3, -->
+<!--                                                                   by_chain = FALSE) -->
+
+<!-- seroprev_plotdat <- seropnts %>%  -->
+<!--   dplyr::select(., c("sim", dplyr::starts_with("seroprev_"))) %>%  -->
+<!--   tidyr::gather(., key = "param", value = "inf_seroprev", 2:ncol(.)) %>% -->
+<!--   dplyr::mutate(Strata = sub("seroprev_", "", param)) %>% -->
+<!--   dplyr::group_by(Strata) %>%  -->
+<!--   dplyr::summarise( -->
+<!--     min = min(inf_seroprev), -->
+<!--     LCI = quantile(inf_seroprev, 0.025), -->
+<!--     median = median(inf_seroprev), -->
+<!--     mean = mean(inf_seroprev), -->
+<!--     UCI = quantile(inf_seroprev, 0.975), -->
+<!--     max = max(inf_seroprev), -->
+<!--     ESS = coda::effectiveSize(coda::as.mcmc(inf_seroprev)), -->
+<!--     GewekeZ = coda::geweke.diag(coda::as.mcmc(inf_seroprev))[[1]], -->
+<!--     GewekeP = dnorm(GewekeZ)) %>%  -->
+<!--   dplyr::left_join(., y = modout$inputs$IFRmodel$data$obs_serology, by = "Strata") %>%  -->
+<!--   dplyr::left_join(., y = modout$inputs$IFRmodel$IFRdictkey, by = "Strata") -->
+
+<!-- seroprev_plotdat <- seroprev_plotdat %>%  -->
+<!--   dplyr::arrange(region) %>%  -->
+<!--   dplyr::mutate(region = forcats::as_factor(region)) -->
+
+<!-- ``` -->
+
+<!-- ```{r, results='asis'} -->
+<!-- ggplot() + -->
+<!--   geom_pointrange(data = seroprev_plotdat, aes(x = region, ymin = LCI, ymax = UCI, y = median), color = "#252525") + -->
+<!--   geom_point(data = seroprev_plotdat, aes(x = region, y = SeroPrev), color = "#3182bd") +  -->
+<!--   theme_bw() + -->
+<!--   theme(axis.text.x = element_text(angle = 45, vjust = 0.90, hjust= 1, face = "bold")) + -->
+<!--   xlab("") + ylab("Median (95% CIs)") + -->
+<!--   ggtitle("Observed vs. RG-Corrected Inferred Observed Seroprevalence (Posterior Check)") -->
+
+
+<!-- ``` -->
 
 <!-- #### Posterior Predictive Check -->
 <!-- ```{r} -->
@@ -224,21 +403,20 @@ ppc_plot_age
 <!-- # get posterior draws -->
 <!-- #...................... -->
 <!-- postdat <- COVIDCurve::posterior_check_infxns_to_death(IFRmodel_inf = modout, -->
-<!--                                                        CIquant = 0.90, -->
+<!--                                                        dwnsmpl = 1e3, -->
 <!--                                                        by_chain = FALSE) -->
-<!-- dwnsmpl <- sample(levels(factor(postdat$sim)), size = 1e3, replace = TRUE) # downsample sims, replace = TRUE just for debug -->
 <!-- postdat_long <- postdat %>% -->
 <!--   dplyr::select(c("sim", "time", dplyr::starts_with("deaths"))) %>% -->
 <!--   tidyr::gather(., key = "param", value = "deaths", 3:ncol(.)) %>% -->
 <!--   dplyr::mutate(param = gsub("deaths_", "", param)) %>%  -->
-<!--   dplyr::left_join(., y = rgnkey, by = "param") %>% -->
-<!--   dplyr::filter(sim %in% dwnsmpl) # downsample sims -->
+<!--   dplyr::left_join(., y = rgnkey, by = "param") -->
 
 <!-- #...................... -->
 <!-- # get deaths posterior pred check -->
 <!-- #...................... -->
 <!-- datclean <-  modout$inputs$IFRmodel$data$obs_deaths %>% -->
-<!--   dplyr::filter(Deaths != -1) -->
+<!--   dplyr::filter(Deaths != -1)  %>%  -->
+<!--   dplyr::left_join(., modout$inputs$IFRmodel$IFRdictkey, by = "Strata") -->
 
 <!-- #......................  -->
 <!-- # make plot -->
@@ -253,6 +431,11 @@ ppc_plot_age
 <!--   ggtitle("Posterior Predictive Check", subtitle = "Grey Lines are Draws from Posterior, Blue Line is Observed Data (from ECDC)") + -->
 <!--   theme(plot.title = element_text(hjust = 0.5, vjust = 0.5), -->
 <!--         plot.subtitle = element_text(hjust = 0.5, vjust = 0.5)) -->
+
+
+<!-- jpeg("figures/NLD_ppc_plot_rgn.jpg", width = 11, height = 8, units = "in", res = 500) -->
+<!-- ppc_plot_rgn -->
+<!-- graphics.off() -->
 
 <!-- ``` -->
 
