--- a/reports/main_report.Rmd
+++ b/reports/main_report.Rmd
@@ -24,15 +24,12 @@ knitr::opts_knit$set(root.dir = here::here())
 ```{r, child = '~/Documents/Github/reestimate_covidIFR_analysis/reports/ESP_IFRcountry_results.Rmd'}
 ```
 
-```{r, child = '~/Documents/Github/reestimate_covidIFR_analysis/reports/DNK_IFRcountry_results.Rmd'}
-```
+<!-- ```{r, child = '~/Documents/Github/reestimate_covidIFR_analysis/reports/DNK_IFRcountry_results.Rmd'} -->
+<!-- ``` -->
 
 ```{r, child = '~/Documents/Github/reestimate_covidIFR_analysis/reports/NLD_IFRcountry_results.Rmd'}
 ```
 
-```{r, child = '~/Documents/Github/reestimate_covidIFR_analysis/reports/sim_pwr.Rmd'}
-```
+<!-- ```{r, child = '~/Documents/Github/reestimate_covidIFR_analysis/reports/sim_pwr.Rmd'} -->
+<!-- ``` -->
 
-
-```{r, child = '~/Documents/Github/reestimate_covidIFR_analysis/reports/call_global_session_info.Rmd'}
-```
