--- a/reports/BRA1_IFR_results.Rmd
+++ b/reports/BRA1_IFR_results.Rmd
@@ -87,7 +87,8 @@ ageplotdat <- BRArcrudedat %>%
 #......................
 infxncurve <- COVIDCurve::draw_posterior_infxn_cubic_splines(IFRmodel_inf = modout,
                                                              dwnsmpl = 1e3,
-                                                             by_chain = FALSE)
+                                                             by_chain = FALSE, 
+                                                             by_strata = TRUE)
 #...................... 
 # make ifr and incidence plots
 #......................
@@ -109,11 +110,11 @@ jpgsnapshot("figures/BRA_ifr_plot_age.jpg", plot = main_plotObj)
 
 ```
 
-```{r, results='asis', fig.width=8, fig.height=6}
+```{r, results='asis', fig.width=8, fig.height=10}
 plot(main_plotObj)
 ```
 
-```{r, results='asis', fig.width=8, fig.height=6}
+```{r, results='asis'}
 ifrs %>% 
   dplyr::mutate_if(is.numeric, round, 2) %>% 
   pretty_DT_tab(.)
@@ -127,9 +128,8 @@ demog <- modout$inputs$IFRmodel$demog %>%
   dplyr::rename(param = Strata)
 demog <- demog %>% 
   dplyr::left_join(., agekey)
-popdenom <- sum(demog$popN)
 
-gIFR <- sum(ifrs$median * demog$popN/popdenom)
+gIFR <- sum(ifrs$median * demog$popN/sum(demog$popN))
 
 tibble::tibble("Overall IFR" = sprintf("%1.2f%%", 100*gIFR)) %>% 
   knitr::kable(.)
@@ -149,8 +149,9 @@ serocurvedat <- seropnts %>%
                 param = stringr::str_extract(seroprev_strata_lvl, "ma[0-9]+")) %>% 
   dplyr::group_by_at(c("sim", "ObsDay", "seroprevlvl", "param")) %>% 
   dplyr::summarise(serocount = sum(serocount, na.rm = T) ) %>% 
-  dplyr::mutate(seroprev = serocount/popdenom) %>% 
-  dplyr::left_join(., agekey, by = "param")
+  dplyr::left_join(., agekey, by = "param") %>% 
+  dplyr::left_join(., demog, by = "ageband") %>% 
+  dplyr::mutate(seroprev = serocount/popN) 
 
 # crude data
 SeroPrevObs <- BRArcrudedat %>% 
@@ -174,7 +175,8 @@ serocurvedat %>%
   scale_color_manual("Seroprev. \n Adjustment", values = c("#FFD301", "#246BCF"),
                      labels = c("Inferred 'Truth'", "Inferred 'Observed' - \n Rogan-Gladen Corrected")) +
   labs(caption = "Grey box is observed seroprevalence across study period") +
-  xyaxis_plot_theme
+  xyaxis_plot_theme +
+  theme(axis.text.x = element_text(angle = 45, vjust = 0.90, hjust= 1, face = "bold"))
 
 ```
 
@@ -289,7 +291,8 @@ rgnplotdat <- BRArcrudedat %>%
 #......................
 infxncurve <- COVIDCurve::draw_posterior_infxn_cubic_splines(IFRmodel_inf = modout,
                                                              dwnsmpl = 1e3,
-                                                             by_chain = FALSE)
+                                                             by_chain = FALSE, 
+                                                             by_strata = TRUE)
 #......................
 # make ifr and incidence plots
 #......................
@@ -311,11 +314,11 @@ jpgsnapshot("figures/BRA_ifr_plot_rgn.jpg", plot = main_plotObj)
 
 ```
 
-```{r, results='asis', fig.width=8, fig.height=6}
+```{r, results='asis', fig.width=8, fig.height=10}
 plot(main_plotObj)
 ```
 
-```{r, results='asis', fig.width=8, fig.height=6}
+```{r, results='asis'}
 ifrs %>%
   dplyr::mutate_if(is.numeric, round, 2) %>%
   pretty_DT_tab(.)
@@ -329,9 +332,8 @@ demog <- modout$inputs$IFRmodel$demog %>%
   dplyr::rename(param = Strata)
 demog <- demog %>%
   dplyr::left_join(., rgnkey)
-popdenom <- sum(demog$popN)
 
-gIFR <- sum(ifrs$median * demog$popN/popdenom)
+gIFR <- sum(ifrs$median * demog$popN/sum(demog$popN))
 
 tibble::tibble("Overall IFR" = sprintf("%1.2f%%", 100*gIFR)) %>%
   knitr::kable(.)
@@ -351,8 +353,9 @@ serocurvedat <- seropnts %>%
                 param = stringr::str_extract(seroprev_strata_lvl, "ma[0-9]+")) %>%
   dplyr::group_by_at(c("sim", "ObsDay", "seroprevlvl", "param")) %>%
   dplyr::summarise(serocount = sum(serocount, na.rm = T) ) %>%
-  dplyr::mutate(seroprev = serocount/popdenom) %>%
-  dplyr::left_join(., rgnkey, by = "param")
+  dplyr::left_join(., rgnkey, by = "param") %>% 
+  dplyr::left_join(., demog, by = "region") %>%
+  dplyr::mutate(seroprev = serocount/popN) 
 
 # crude data
 SeroPrevObs <- BRArcrudedat %>%
@@ -376,7 +379,8 @@ serocurvedat %>%
   scale_color_manual("Seroprev. \n Adjustment", values = c("#FFD301", "#246BCF"),
                      labels = c("Inferred 'Truth'", "Inferred 'Observed' - \n Rogan-Gladen Corrected")) +
   labs(caption = "Grey box is observed seroprevalence across study period") +
-  xyaxis_plot_theme
+  xyaxis_plot_theme + 
+  theme(axis.text.x = element_text(angle = 45, vjust = 0.90, hjust= 1, face = "bold"))
 
 ```
 
