--- a/reports/CHE1_IFR_results.Rmd
+++ b/reports/CHE1_IFR_results.Rmd
@@ -88,7 +88,8 @@ ageplotdat <- CHE1crudedat %>%
 #......................
 infxncurve <- COVIDCurve::draw_posterior_infxn_cubic_splines(IFRmodel_inf = modout,
                                                              dwnsmpl = 1e3,
-                                                             by_chain = FALSE)
+                                                             by_chain = FALSE, 
+                                                             by_strata = TRUE)
 #...................... 
 # make ifr and incidence plots
 #......................
@@ -110,11 +111,11 @@ jpgsnapshot("figures/CHE1_ifr_plot_age.jpg", plot = main_plotObj)
 
 ```
 
-```{r, results='asis', fig.width=8, fig.height=6}
+```{r, results='asis', fig.width=8, fig.height=10}
 plot(main_plotObj)
 ```
 
-```{r, results='asis', fig.width=8, fig.height=6}
+```{r, results='asis'}
 ifrs %>% 
   dplyr::mutate_if(is.numeric, round, 2) %>% 
   pretty_DT_tab(.)
@@ -122,15 +123,14 @@ ifrs %>%
 ```
 
 ##### Overall IFR
-```{r, results='asis', fig.width=8, fig.height=6}
+```{r, results='asis'}
 # population denom
 demog <- modout$inputs$IFRmodel$demog %>% 
   dplyr::rename(param = Strata)
 demog <- demog %>% 
   dplyr::left_join(., agekey)
-popdenom <- sum(demog$popN)
 
-gIFR <- sum(ifrs$median * demog$popN/popdenom)
+gIFR <- sum(ifrs$median * demog$popN/sum(demog$popN))
 
 tibble::tibble("Overall IFR" = sprintf("%1.2f%%", 100*gIFR)) %>% 
   knitr::kable(.)
@@ -150,8 +150,9 @@ serocurvedat <- seropnts %>%
                 param = stringr::str_extract(seroprev_strata_lvl, "ma[0-9]+")) %>% 
   dplyr::group_by_at(c("sim", "ObsDay", "seroprevlvl", "param")) %>% 
   dplyr::summarise(serocount = sum(serocount, na.rm = T) ) %>% 
-  dplyr::mutate(seroprev = serocount/popdenom) %>% 
-  dplyr::left_join(., agekey, by = "param")
+  dplyr::left_join(., agekey, by = "param") %>% 
+   dplyr::left_join(., demog, by = "ageband") %>% 
+  dplyr::mutate(seroprev = serocount/popN)
 
 # crude data
 SeroPrevObs <- CHE1crudedat %>% 
@@ -175,7 +176,9 @@ serocurvedat %>%
   scale_color_manual("Seroprev. \n Adjustment", values = c("#FFD301", "#246BCF"),
                      labels = c("Inferred 'Truth'", "Inferred 'Observed' - \n Rogan-Gladen Corrected")) +
   labs(caption = "Grey box is observed seroprevalence across study period") +
-  xyaxis_plot_theme
+  xyaxis_plot_theme + 
+  theme(axis.text.x = element_text(angle = 45, vjust = 0.90, hjust= 1, face = "bold"))
+
 
 ```
 
